Fixed intersectionobserver bug causing the first parallax break animation to go out of place when scrolling to the bottom of the page. Also added an arrow svg to the header, still needs functionality for page navigation

--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -4,3 +4,15 @@
     min-height: 20rem;
     width: 105vw;
 }
+.hidesvg{
+    display: none;
+}
+.totopsvg {
+    display: inline-block;
+    background: transparent;
+    fill: white;
+    width: 3.5rem;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
