--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1,5 +1,20 @@
-.header{
-    width: 100vw;
+@keyframes arrowbounce{
+    from { transform: translate3d(0, 0, 0);}
+    to { transform: translate3d(0, -15px, 0);}
+}
+.downarrowsvg{
+    width: 14vw;
+    max-width: 3rem;
+    margin-bottom: 0.5rem;
+    fill: white;
+    align-self: center;
+    background-color: transparent;
+    border-radius: 50%;
+    animation: arrowbounce 1s;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+
+    
 }
 .triangle-banner-wrap{
     display: flex;
@@ -15,7 +30,10 @@ html,body
     overflow-x: hidden; 
 }
 .header{
-    background-image: url("images/drink.avif");
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-image: url(images/drink.avif);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -191,7 +209,7 @@ h1{
     /* font-size: 5em;
     padding: 0 2rem; */
 }
-.feauted-items-parallax-wrap{
+.featured-items-parallax-wrap{
     background-image: url("images/happy.avif");
     background-repeat: no-repeat;
     background-attachment: fixed;
